# mwatershed

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Cargo.toml  LICENSE  README.md  README.rst  affogato_comparison.py  fun.py  pyproject.toml  scratch.py  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: black.yaml  cargo.yaml  docs.yaml  publish.yaml  pytest.yaml  ruff.yaml  test_py.yaml  tests.yaml
benches/: agglom.rs
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/source/: api.rst  conf.py  index.rst  install.rst
mwatershed/: __init__.py
src/: clustering.rs  labels.rs  lib.rs  main.rs
tests/: test_affs.py  test_agglom.py  test_mwatershed.py
tutorials/: affogato_comparison.py
