[package]
name = "mwatershed"
version = "0.5.3"
edition = "2018"

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
numpy = "0.27.0"
ndarray = "0.16.1"
itertools = "0.14.0"
ordered-float = "5.1"
ndarray-rand = "0.16"
futures = "0.3"
disjoint-sets = "0.4.2"

[dev-dependencies]
criterion = "0.7"
rand_isaac = "0.4.0"

[lib]
name = "mwatershed"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "agglom"
harness = false
