[build-system]
requires = ["maturin>=1.7.0"]
build-backend = "maturin"

[project]
authors = [{ name = "William Patton", email = "wllmpttn24@gmail.com" }]
name = "mwatershed"
version = "0.5.4"
description = "A rusty mutex watershed"
readme = "README.md"

requires-python = ">=3.11"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

dependencies = [
    "numpy>=1.18.0"
]

[project.optional-dependencies]
dev = [
    "bump-my-version>=1.1.2",
    "maturin>=1.9",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
docs = [
    "ipykernel>=6.29.5",
    "nbsphinx>=0.9.6",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-material>=0.0.36",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=4.0",
    "jupytext>=1.16.7",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }